<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZXingCodeLibs</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
	<string name="camera_open_notice">您已经开启了灯光！</string>
	<string name="camera_close_notice">您已经关闭了灯光！</string>
    
	<string name="camera_problem">抱歉，您需要在权限管理中添加摄像头权限</string>
	<string name="framwork_problem">二维码扫描暂时出现问题。您重启再试。</string>
	<string name="msg_share_subject_line">这是我所扫描条码的内容</string>
	<string name="msg_default_mms_subject">Hi</string>
	<string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
	 <string name="button_ok">确定</string>
	 <string name="result_uri">网址路径</string>
	 
	 <string name="button_1">浏览器打开</string>
	 <string name="button_2">内容</string>
	 <string name="button_3">其它标题</string>
	 <string name="result_title_default">网址路径</string>
	 
	 <string name="qrcode_notice">将条形码放在框内即可开锁</string>
	 <string name="openorclose_light">打开或关闭灯光</string>
	 <string name="qrcode_empty"></string>
	 
	 <string name="qrcode_open">用浏览器打开</string>
	 
	 <string name="paramete_error">参数正确，请重新扫描</string>
	<string name="bike_no_length">10</string>
	<string name="camera_title">扫码开锁</string>
	<string name="tip_1001">手动输入车辆编号</string>
	<string name="tip_1002">打开手电筒</string>
	<string name="tip_1003">输入编号开锁</string>
	<string name="tip_1004">请确认您输入了正确的自行车编码</string>
	<string name="tip_1005">手动输入车辆编号</string>

</resources>
