<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <!--这个是隐藏的布局，然后通过动态的设置高度达到效果-->
    <LinearLayout
        style="@style/StatusBarStyle"
        android:background="@color/green">
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:background="@color/green">

        <FrameLayout
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:padding="10dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/back"
                tools:ignore="ContentDescription"/>
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tip_1003"
            android:textColor="#fff"
            android:textSize="17sp"/>

        <!--<TextView-->
            <!--android:id="@+id/tv_helper"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginRight="10dp"-->
            <!--android:text="使用帮助"-->
            <!--android:textColor="@color/WHITE"/>-->
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/iv_flash"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/flashlightmanual"
            tools:ignore="ContentDescription"/>
    </FrameLayout>

    <com.jungly.gridpasswordview.GridPasswordView
        android:id="@+id/pswView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        app:gpvGridColor="#8999"
        app:gpvLineColor="@color/green"
        app:gpvLineWidth="1dp"
        app:gpvPasswordLength="10"
        app:gpvPasswordType="numberPassword"
        app:gpvTextColor="@color/green"
        app:gpvTextSize="22sp"/>

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/tip_1004"
        android:textColor="#999909"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/recharge_button_bg_gray"
        android:clickable="false"
        android:text="@string/button_ok"
        android:textColor="@color/WHITE"
        android:textSize="17sp"/>
</LinearLayout>